[metadata]
name = python-lib-for-me
version = attr: python_lib_for_me.__version__
license = MIT
description = python lib for me
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    python-dateutil >= 2.8.2
python_requires =
    >= 3.10
packages = find:
